2013-08-22  Glen Mazza (gmazza AT apache DOT org)

       * No revision number (IT tests change only)

       * For IT tests switched to Brian Matthew's inmemdb-maven-plugin used by Roller, creates an in-memory
         HSQLDB database with a lifespan that of the IT tests themselves (so no Ant tasks and no DB drop 
         scripts needed).

       * jspwiki-it-test-custom-jdbc test now working, only one still not operative is -container-jdbc,
         which is up from 0 to 25 percent working.
        
2013-08-22  Glen Mazza (gmazza AT apache DOT org)

       * 2.10.0-svn-43

       * Changed jspwiki.propertyfile.cascade to jspwiki.custom.cascade to emphasize cascading is done
         on top of new jspwiki-custom.properties file if present, the default properties file only if not
         present.

       * Changed some internal constants from "propertyfile" to "custom" so they more accurately reflect
         their meaning in 2.10.
        
2013-08-17  Glen Mazza (gmazza AT apache DOT org)

       * 2.10.0-svn-42

       * Updated code from using org.hsqldb.jdbcDriver to org.hsqldb.jdbc.JDBCDriver

       * Switched from inaccurate NoRequiredPropertyException to somewhat better WikiSecurityException 
         for database errors in JDBCGroup/UserDatabase (former was giving confusing error messages
         when the underlying problem was just DB-related).

       * More work in IT tests, for JDBC tests to become operative again (not yet finished).

       * Renamed HsqlDbUtils to HsqlDBUtilsIT in it-tests, to fully ensure HsqlDBUtils in jspwiki-war
         isn't being run instead.
        
2013-08-15  Glen Mazza (gmazza AT apache DOT org)

       * 2.10.0-svn-41

       * Removed "incubator" from JSPWiki taglib URI, removed deprecated in 2004 RSSLinkTag

       * Some simplifications to web.xml put in, taking advantage of 2.5 web.xml format.
        
2013-08-15  Glen Mazza (gmazza AT apache DOT org)

       * 2.10.0-svn-40
