@@ -166,35 +166,6 @@
        <servlet-class>org.apache.wiki.attachment.AttachmentServlet</servlet-class>
    </servlet>
 
-   <!-- PLACEHOLDER FOR PRE-COMPILED JSP SERVLETS -->
-
-   <!--
-       And finally, let us tell the servlet container which
-       URLs should correspond to which XML RPC servlet.
-     -->
-
-   <!-- By default, this is disabled.  If you want to enabled it,
-        just uncomment the whole section. -->
-
-   <!--  REMOVE ME TO ENABLE XML-RPC
-
-   <servlet-mapping>
-       <servlet-name>XMLRPC</servlet-name>
-       <url-pattern>/RPC2/</url-pattern>
-   </servlet-mapping>
-
-   <servlet-mapping>
-       <servlet-name>XMLRPC-UTF8</servlet-name>
-       <url-pattern>/RPCU/</url-pattern>
-   </servlet-mapping>
-
-   <servlet-mapping>
-       <servlet-name>ATOM</servlet-name>
-       <url-pattern>/atom/*</url-pattern>
-   </servlet-mapping>
-
-   AND REMOVE ME TOO -->
-
    <servlet-mapping>
        <servlet-name>AttachmentServlet</servlet-name>
        <url-pattern>/attach/*</url-pattern>
@@ -222,52 +193,12 @@
      <location>/error/Forbidden.html</location>
    </error-page>
 
-   
-   <resource-ref>
-       <description>
-           Resource reference to JNDI factory for the JDBCUserDatabase.
-       </description>
-       <res-ref-name>
-           jdbc/UserDatabase
-       </res-ref-name>
-       <res-type>
-           javax.sql.DataSource
-       </res-type>
-       <res-auth>
-           Container
-       </res-auth>
-   </resource-ref>
-   <resource-ref>
-       <description>
-           Resource reference to JNDI factory for the JDBCGroupDatabase.
-       </description>
-       <res-ref-name>
-           jdbc/GroupDatabase
-       </res-ref-name>
-       <res-type>
-           javax.sql.DataSource
-       </res-type>
-       <res-auth>
-           Container
-       </res-auth>
-   </resource-ref>
-   
-
-   <!--  REMOVE ME TO ENABLE JAVAMAIL
-   <resource-ref>
-     <description>Resource reference to a container-managed JNDI JavaMail factory for sending e-mails.</description>
-     <res-ref-name>mail/Session</res-ref-name>
-     <res-type>javax.mail.Session</res-type>
-     <res-auth>Container</res-auth>
-   </resource-ref>
-   REMOVE ME TO ENABLE JAVAMAIL  -->
-
    <!--
        CONTAINER-MANAGED AUTHENTICATION & AUTHORIZATION
     
        Here we define the users which are allowed to access JSPWiki.
        These restrictions cause the web container to apply further 
-       contraints to the default security policy in jspwiki.policy,
+       constraints to the default security policy in jspwiki.policy,
        and should be suitable for a corporate intranet or public wiki.
 
        In particular, the restrictions below allow all users to
@@ -303,8 +234,6 @@
        elements.
    -->
 
-   
-   
    <security-constraint>
        <web-resource-collection>
            <web-resource-name>Administrative Area</web-resource-name>
@@ -373,7 +302,5 @@
        </description>
        <role-name>Admin</role-name>
    </security-role>
-   
-   
- 
+
 </web-app>
